2000-09-08  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/NSText.m: Changed varius places to make 
	more consistent.
	
Thu Sep  7 21:46:33 2000  Nicola Pero  <nicola@brainstorm.co.uk>
	
	* Source/NSTableColumn.m ([-setWidth:]): Post the old width in the
	notification user info.
	* Source/NSTableView.m ([-mouseDown:]): Fixed clicking on the
	table with shift pressed when multiple selection is not allowed.
	([-_selectColumn:modifiers:]): Idem for clicks on the table header
	view.  ([-removeTableColumn:]): Rearrange selection if needed.
	([-moveColumn:toColumn:]): Implemented.  ([-sizeLastColumnToFit]):
	Allow shrinking last column if needed.
	
Thu Sep  7 17:47:46 2000  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSStringDrawing.m ([NSAttributedString -drawInRect:]): 
	Use NSRectClip as a temporary workaround for the fact that 
	the string is to be drawn only inside rect.

Thu Sep  7 17:01:58 2000  Nicola Pero  <nicola@brainstorm.co.uk>

	* Headers/gnustep/gui/NSTableHeaderView.h: Added ivar for
	resized column.
	* Source/NSTableHeaderView.m ([-setTableView:]): Initialize
	resized column ivar.  ([-resizedColumn:]): Implemented.
	([-mouseDown:]): Implemented resizing of columns.
	* Headers/gnustep/gui/NSTableView.h: Added ivar for allowing
	column resizing.
	* Source/NSTableView.m ([-allowsColumnResizing]),
	([-setAllowsColumnResizing:]): Implemented.  ([-initWithFrame:]):
	Allow column resizing by default.
	([-_userResizedTableColumn:leftWidth:rightWidth:]): New private
	method.
	
Thu Sep  7 14:56:47 2000  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSSplitView.m ([-mouseDown:]): Removed periodic events.
	Do not ask window to track mouse moved events.  Only accept 
	left mouse dragged and left mouse up events during dragging.
	
Thu Sep  7 02:56:25 2000  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSApplication.m ([-_windowWillClose:notification]): Use
	NSDebugLog instead of NSLog to log asking to delegate whether to
	terminate app.
